--- a/vrtstyle.css
+++ b/vrtstyle.css
@@ -35,11 +35,11 @@
         section {
             padding: 2rem;
             max-width: 1200px;
-            margin: auto;
+            margin: 3px auto;
         }
 
         section:nth-child(odd) {
-            background-color: #FFFFFF;
+            background-color: #000308;
         }
 
         section:nth-child(even) {
