--- a/vrtstyle.css
+++ b/vrtstyle.css
@@ -39,7 +39,7 @@
         }
 
         section:nth-child(odd) {
-            background-color: #000308;
+            background-color: #F8FAFB;
         }
 
         section:nth-child(even) {
