--- a/vrtstyle.css
+++ b/vrtstyle.css
@@ -9,7 +9,7 @@
         body {
             font-family: 'Arial', sans-serif;
             line-height: 1.6;
-            background-color: #F3F4F6;
+            background-image: linear-gradient(#7338A0, #4A2574);
             color: #333;
         }
 
@@ -19,7 +19,7 @@
             color: white;
             padding: 1rem 0;
             text-align: center;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 2px 5px rgba(3, 4, 5, 0.2);
         }
 
         header h1 {
@@ -31,11 +31,22 @@
             margin-top: 0.5rem;
         }
 
+        h3 {
+                text-align: center;
+                border:none;
+                border-top-left-radius:5px;
+                border-top-right-radius:5px;
+                background-color:#924DBF;
+        }
+                
+
         /* Section Styles */
         section {
             padding: 2rem;
             max-width: 1200px;
             margin: 3px auto;
+            border:1px solid inherit;
+            border-radius:5px;
         }
 
         section:nth-child(odd) {
