--- a/vrtstyle.css
+++ b/vrtstyle.css
@@ -37,6 +37,7 @@
                 border-top-left-radius:5px;
                 border-top-right-radius:5px;
                 background-color:#924DBF;
+                margin-top:5px;
         }
                 
 
