--- a/vrtstyle.css
+++ b/vrtstyle.css
@@ -18,7 +18,7 @@
                 background-position: center;
                 background-size: cover;
                 height:50px;
-                background-image: url(assets/hdrcover.png);
+                background-image: url(assets/vrtporhdr.png);
             background-color: #4CAF50;
             color: white;
             padding: 1rem 0;
