--- a/vrtstyle.css
+++ b/vrtstyle.css
@@ -18,7 +18,7 @@
                 background-position: center;
                 background-size: cover;
                 height:100px;
-                background-image: url(assets/vrtporthdr.png);
+                background-image: url("assets/vrtporthdr.png");
                 
             color: white;
             padding: 1rem 0;
