--- a/vrtstyle.css
+++ b/vrtstyle.css
@@ -53,6 +53,7 @@
             margin: 3px auto;
             border:1px solid inherit;
             border-radius:5px;
+            background-image: linear-gradient(to bottom right, #924DBF,#7338A0);
         }
 
         section:nth-child(odd) {
